--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,5 +1,12 @@
 body
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
+
 a
-  color: #00B7FF
+  color #00B7FF
+
+#heatmap
+  width 300px
+  height 300px
+  border 1px solid silver
+  position relative
