--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -6,8 +6,16 @@ a {
   color: #00b7ff;
 }
 #heatmap {
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
   border: 1px solid #c0c0c0;
   position: relative;
+}
+#heatmap .grid {
+  width: 100%;
+  height: 100%;
+  border-collapse: collapse;
+}
+#heatmap .grid td {
+  border: 1px dashed #eee;
 }
