--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -6,7 +6,15 @@ a
   color #00B7FF
 
 #heatmap
-  width 300px
-  height 300px
-  border 1px solid silver
+  width    500px
+  height   500px
+  border   1px solid silver
   position relative
+
+  .grid 
+    width  100%
+    height 100%
+    border-collapse collapse
+    
+    td
+      border 1px dashed #eee
