Add skeleton CSS boilerplate
http://www.getskeleton.com/

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -15,5 +15,5 @@ block content
 
 block scripts
   script var points = !{JSON.stringify(data)};
-  script(src='/static/script/heatmap.js'   type='application/javascript')
-  script(src='/static/script/happyheat.js' type='application/javascript')
+  script(src='/script/heatmap.js'   type='application/javascript')
+  script(src='/script/happyheat.js' type='application/javascript')
