--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -1,8 +1,20 @@
 doctype html
-html
+html(lang='sv')
   head
+    meta(charset='utf-8')
     title= title
-    link(rel='stylesheet', href='/static/stylesheets/style.css')
+
+    link(rel='stylesheet', href='/stylesheets/base.css')
+    link(rel='stylesheet', href='/stylesheets/skeleton.css')
+    link(rel='stylesheet', href='/stylesheets/layout.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+
+    meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1')
+ 
   body
+    header
+      block header
     block content
+    footer
+      block footer
     block scripts
