Added images to GUI + fixed nice dark theme

--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -12,9 +12,13 @@ html(lang='sv')
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1')
  
   body
-    header
-      block header
-    block content
+    .super-container
+      header
+        block header
+
+      block content
+
     footer
       block footer
+
     block scripts
