--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -1,24 +1,84 @@
+border-color = #333
+headfoot-color = #232830
+footer-height = 251px
+font-color = #777
+
+html,body
+  height 100%
+
 body
-  padding: 50px
   font 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  background-color #2B303B
+  color font-color
 
-a
-  color #00B7FF
+a, a:visited
+  color #FFF
 
-header
-  color FFF
-  background-color 000
+p 
+  margin 10px
 
-#heatmap
-  width    500px
-  height   500px
-  border   1px solid silver
-  position relative
+.super-container
+  width 100%
+  min-height 100%
+  margin-bottom -(footer-height)
 
-  .grid 
-    width  100%
-    height 100%
-    border-collapse collapse
-    
-    td
-      border 1px dashed #eee
+  header
+    background-color headfoot-color
+    padding 20px
+    border-bottom 1px border-color solid
+
+    img 
+      float left
+      padding-right 20px
+      display block
+
+    .team-wrap
+      float left
+
+      h1
+        color font-color
+        text-transform capitalize
+        margin 0 
+
+      .motto
+        font-size .8em
+        font-style italic
+      
+
+.super-container:after
+  content ""
+  display block
+  height footer-height
+
+footer
+  background-color headfoot-color
+  height footer-height
+  width 100%
+  border-top solid 1px border-color
+
+  img 
+    float left
+    padding 25px
+
+  blockquote
+    float left
+    padding 40px 0
+    width 500px
+    font-size 2.5em
+    border 0
+    line-height 1.1em
+
+.container 
+  #heatmap
+    margin   auto 
+    width    500px
+    height   500px
+    position relative
+
+    .grid 
+      width  100%
+      height 100%
+      border-collapse collapse
+      
+      td
+        border 1px dashed border-color
